In machine_learning_template.ipynb > EDA > Bivariate > Categorical vs Categorical > Visualize Relationships section: Add function to visualize pairwise relationships between all categorical columns using a grouped bar plot matrix

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2793,10 +2793,10 @@
     "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
     "</div>\n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Grouped bar plot matrix between all pairs of categorical columns. <br><br>\n",
-    "    💡 For example, 6 categorical columns would result in 15 grouped bar plots in a 5x3 matrix.\n",
-    "</div>"
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    <strong>Categorical-Categorical Relationships (Grouped Bar Plot Matrix)</strong> <br>\n",
+    "    📌 Visualize pairwise relationships between all categorical columns with low cardinality using a grouped bar plot matrix.\n",
+    "</p>"
    ]
   },
   {
@@ -2806,44 +2806,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def grouped_barplot_matrix(df, categorical_columns):\n",
+    "# Function to visualize pairwise relationships between all categorical columns using a grouped bar plot matrix\n",
+    "def plot_categorical_relationships(df, categorical_columns, max_categories=5, safe_to_file=False):\n",
+    "    # Filter columns with low cardinality (small number of unique categories) \n",
+    "    low_cardinality_columns = [column for column in categorical_columns if df[column].nunique() <= max_categories]\n",
+    "\n",
     "    # Get all possible pairs of categorical columns\n",
-    "    column_pairs = tuple(itertools.combinations(categorical_columns, 2))\n",
+    "    column_pairs = tuple(itertools.combinations(low_cardinality_columns, 2))\n",
     "    \n",
-    "    # Calculate number of rows and columns needed for the subplot grid\n",
+    "    # Calculate number of rows and columns for subplot grid\n",
     "    n_plots = len(column_pairs)\n",
     "    n_cols = 3  \n",
     "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
-    "    # Create figure with appropriate size\n",
-    "    # Adjust the multipliers (4, 4) to make plots larger or smaller\n",
+    "    # Set the figure size based on 4x4 inches per subplot\n",
     "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
     "    \n",
-    "    # Create grouped bar plots for each pair\n",
+    "    # Iterate over each column pair\n",
     "    for i, (column_1, column_2) in enumerate(column_pairs):\n",
     "        # Create subplot\n",
     "        ax = plt.subplot(n_rows, n_cols, i + 1)\n",
     "\n",
-    "        # Create contingency table with frequency (%)\n",
-    "        contingency_table = pd.crosstab(df[column_1], df[column_2], normalize=True) * 100\n",
+    "        # Ensure column_1 (plot x-axis) has higher cardinality (more categories) for plot readability\n",
+    "        if df[column_1].nunique() < df[column_2].nunique():\n",
+    "            column_1, column_2 = column_2, column_1\n",
     "        \n",
+    "        # Create contingency table (normalize=\"index\" calculates the percentage distribution of column_2 within each category of column_1)\n",
+    "        contingency_table = pd.crosstab(df[column_1], df[column_2], normalize=\"index\") \n",
+    "\n",
+    "        # Reshape data for easier plotting  \n",
+    "        plot_df = contingency_table.stack().reset_index()\n",
+    "        plot_df.columns = [column_1, column_2, \"Frequency\"]\n",
+    "         \n",
     "        # Create grouped bar plot\n",
-    "        contingency_table.plot(kind=\"bar\", ax=ax)\n",
+    "        sns.barplot(data=plot_df, x=column_1, y=\"Frequency\", hue=column_2, palette=\"viridis\", ax=ax)\n",
+    "\n",
+    "        # Add value labels\n",
+    "        n_categories_col2 = plot_df[column_2].nunique()\n",
+    "        value_label_size = {1: 10, 2: 10, 3: 8}.get(n_categories_col2, 7)  # dynamic fontsize based on number of categories (default fontsize 7)\n",
+    "        for container in ax.containers:\n",
+    "            value_labels = [f\"{value * 100:.0f}%\" for value in container.datavalues]\n",
+    "            ax.bar_label(container, labels=value_labels, padding=2, fontsize=value_label_size) \n",
+    "                    \n",
+    "        # Extend the y-axis upper limit by 5% \n",
+    "        y_min, y_max = ax.get_ylim()\n",
+    "        ax.set_ylim(y_min, y_max * 1.05)\n",
     "        \n",
-    "        # Add title and labels\n",
-    "        plt.title(f\"{column_1.title().replace('_', ' ')} vs. {column_2.title().replace('_', ' ')}\")\n",
-    "        plt.xlabel(column_1.title().replace('_', ' '))\n",
-    "        plt.ylabel(\"Frequency (%)\")\n",
-    "        plt.legend(title=f\"{column_2.title().replace('_', ' ')}\")\n",
+    "        # Customize title and axes labels\n",
+    "        column_1_name = column_1.title().replace(\"_\", \" \")\n",
+    "        column_2_name = column_2.title().replace(\"_\", \" \")\n",
+    "        ax.set_title(f\"{column_1_name} vs. {column_2_name}\", fontsize=14)\n",
+    "        ax.set_xlabel(column_1_name, fontsize=12)\n",
+    "        ax.set_ylabel(f\"% within {column_1_name}\", fontsize=12)\n",
+    "        \n",
+    "        # Customize axes ticks\n",
+    "        ax.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=0))  # format y-axis tick labels as percentages\n",
+    "        ax.set_xticks(range(plot_df[column_1].nunique()))\n",
+    "        ax.set_xticklabels(label.get_text().title().replace(\"_\", \" \") for label in ax.get_xticklabels())  # format x-axis tick labels\n",
+    "\n",
+    "        # Customize legend\n",
+    "        legend_handles, legend_labels = ax.get_legend_handles_labels()\n",
+    "        legend_labels = [str(label).title().replace(\"_\", \" \") for label in legend_labels]  # format legend labels \n",
+    "        ax.legend(handles=legend_handles, labels=legend_labels, title=column_2_name)    \n",
     "    \n",
     "    # Adjust layout to prevent overlap\n",
     "    plt.tight_layout()\n",
+    "\n",
+    "    # Save the plot to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Categorical relationships plot (grouped bar plot matrix) saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving categorical relationships plot (grouped bar plot matrix): {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving categorical relationships plot (grouped bar plot matrix) to file: '{image_path}' already exists.\")\n",
     "    \n",
     "    # Show the plot\n",
     "    plt.show()\n",
     "\n",
-    "# Use function to create grouped bar plot matrix \n",
-    "grouped_barplot_matrix(df_train, categorical_columns + boolean_columns)"
+    "\n",
+    "# Use function to visualize relationships between all categorical columns in the training data\n",
+    "plot_categorical_relationships(df_train, categorical_columns + boolean_columns, safe_to_file=\"categorical_relationships_groupedbarplots.png\")"
    ]
   },
   {
