In machine_learning_template.ipynb > EDA > Bivariate > Categorical vs Categorical > Visualize Relationships section: Customize individual grouped bar plots for better interpretability

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2898,9 +2898,10 @@
    "id": "916000d9-45d4-4a14-9b31-777bd511320c",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Grouped bar plot between two categorical columns. \n",
-    "</div>"
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Customize individual grouped bar plots for better interpretability. <br><br>\n",
+    "    💡 Example: Display only the top and bottom 5 categories (useful for high-cardinality columns).\n",
+    "</p>"
    ]
   },
   {
@@ -2910,12 +2911,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grouped bar plot \n",
-    "contingency_table.plot(kind=\"bar\")\n",
-    "plt.title(f\"{contingency_table.index.name.title()} vs. {contingency_table.columns.name.title()}\")\n",
-    "plt.xlabel(contingency_table.index.name.title())\n",
-    "plt.ylabel(\"Frequency (%)\")\n",
-    "plt.legend(title=f\"{contingency_table.columns.name.title()}\")\n",
+    "# Create contingency table (normalize=\"index\" calculates the percentage distribution of column_2 within each category of column_1)\n",
+    "contingency_table = pd.crosstab(df[\"categorical_column_1\"], df[\"categorical_column_2\"], normalize=\"index\") \n",
+    "\n",
+    "# Sort categories from highest to lowest (by class 1 of categorical_column_2)\n",
+    "contingency_table = contingency_table.sort_values(by=1, ascending=False)\n",
+    "\n",
+    "# Filter 5 highest and 5 lowest categories\n",
+    "contingency_table = pd.concat([contingency_table.head(5), contingency_table.tail(5)])\n",
+    "\n",
+    "# Reshape data for easier plotting  \n",
+    "plot_df = contingency_table.stack().reset_index()\n",
+    "plot_df.columns = [\"categorical_column_1\", \"categorical_column_2\", \"Frequency\"]\n",
+    "\n",
+    "# Create figure and axes\n",
+    "fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "\n",
+    "# Create grouped bar plot\n",
+    "sns.barplot(data=plot_df, x=\"categorical_column_1\", y=\"Frequency\", hue=\"categorical_column_2\", palette=\"viridis\", ax=ax)\n",
+    "\n",
+    "# Add value labels\n",
+    "for container in ax.containers:\n",
+    "    value_labels = [f\"{value * 100:.1f}%\" for value in container.datavalues]\n",
+    "    ax.bar_label(container, labels=value_labels, padding=2, fontsize=10) \n",
+    "            \n",
+    "# Extend the y-axis upper limit by 5% \n",
+    "y_min, y_max = ax.get_ylim()\n",
+    "ax.set_ylim(y_min, y_max * 1.05)\n",
+    "\n",
+    "# Customize title and axes labels\n",
+    "column_1_name = \"categorical_column_1\".title().replace(\"_\", \" \")\n",
+    "column_2_name = \"categorical_column_2\".title().replace(\"_\", \" \")\n",
+    "ax.set_title(f\"{column_1_name} vs. {column_2_name}\", fontsize=14)\n",
+    "ax.set_xlabel(column_1_name, fontsize=12)\n",
+    "ax.set_ylabel(f\"% Within {column_1_name}\", fontsize=12)\n",
+    "\n",
+    "# Customize axes ticks\n",
+    "ax.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=0))  # format y-axis tick labels as percentages\n",
+    "column_1_categories = contingency_table.index.tolist()  # Get the specific order of categories\n",
+    "ax.set_xticks(range(len(column_1_categories)))\n",
+    "ax.set_xticklabels([label.title().replace(\"_\", \" \") for label in column_1_categories], rotation=45, ha=\"right\") \n",
+    "\n",
+    "# Customize legend\n",
+    "legend_handles, legend_labels = ax.get_legend_handles_labels()\n",
+    "legend_labels = [str(label).title().replace(\"_\", \" \") for label in legend_labels]\n",
+    "ax.legend(handles=legend_handles, labels=legend_labels, title=column_2_name)    \n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
