In machine_learning_template.ipynb > EDA > Bivariate > Numerical vs Categorical > Visualize Relationships section: Add function to plot numerical-categorical relationships using a bar plot matrix

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2511,31 +2511,85 @@
     "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
     "</div>\n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot of a single numerical column grouped by a single categorical column.\n",
-    "</div>"
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    <strong>Numerical-Categorical Relationships (Bar Plot Matrix)</strong> <br>\n",
+    "    📌 Visualize pairwise relationships between all numerical columns and a single categorical column using a bar plot matrix.\n",
+    "</p>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f6c9f6-896f-4490-a125-3fe8ce91cb8c",
+   "id": "a53e7c05-d27a-4604-88b5-4a053c8c48b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Store the median of the numerical column by category\n",
-    "median_by_category = stats_by_category.median()\n",
+    "# Function to visualize pairwise relationships between multiple numerical columns and a single categorical column using a bar plot matrix\n",
+    "def plot_numerical_categorical_relationships(df, numerical_columns, categorical_column, estimator=np.median, safe_to_file=False):\n",
+    "    # Calculate number of rows and columns for subplot grid\n",
+    "    n_plots = len(numerical_columns)\n",
+    "    n_cols = 3  \n",
+    "    n_rows = math.ceil(n_plots / n_cols) \n",
+    "    \n",
+    "    # Set the figure size based on 4x4 inches per subplot\n",
+    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Iterate over all numerical columns\n",
+    "    for i, numerical_column in enumerate(numerical_columns):\n",
+    "        # Create subplot \n",
+    "        ax = plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        \n",
+    "        # Create bar plot \n",
+    "        sns.barplot(data=df, x=categorical_column, y=numerical_column, estimator=estimator, errorbar=None, ax=ax)\n",
     "\n",
-    "# Bar plot of median by category\n",
-    "sns.barplot(x=median_by_category.index, y=median_by_category.values, palette=\"colorblind\")\n",
+    "        # Add value labels \n",
+    "        for bar in ax.patches:  # patches are the bars themselves\n",
+    "            # Get the height of the bar (which is the value)\n",
+    "            height = bar.get_height()\n",
+    "            \n",
+    "            # Format value labels            \n",
+    "            value = f\"{height:.1f}\"\n",
+    "                \n",
+    "            # Get the x and y coordinates for the text label\n",
+    "            x_pos = bar.get_x() + bar.get_width() / 2.\n",
+    "            y_pos = height * 1.01\n",
     "\n",
-    "# Add title and axes labels\n",
-    "plt.title(\"Median numerical_column by categorical_column\")\n",
-    "plt.xlabel(\"Category\")\n",
-    "plt.ylabel(\"numerical_column\")\n",
+    "            # Add the text label \n",
+    "            ax.text(x_pos, y_pos, value, ha=\"center\", va=\"bottom\", fontsize=10) \n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "        # Extend the y-axis upper limit by 5% to make room for value labels\n",
+    "        y_min, y_max = ax.get_ylim()\n",
+    "        ax.set_ylim(y_min, y_max * 1.05)\n",
+    "        \n",
+    "        # Customize title and axes labels \n",
+    "        numerical_column_name = numerical_column.title().replace(\"_\", \" \")\n",
+    "        categorical_column_name = categorical_column.title().replace(\"_\", \" \")\n",
+    "        ax.set_title(f\"{estimator.__name__.title()} {numerical_column_name} by {categorical_column_name}\", fontsize=13)\n",
+    "        ax.set_xlabel(\"\")\n",
+    "        ax.set_ylabel(numerical_column_name, fontsize=12)\n",
+    "    \n",
+    "    # Adjust layout to prevent overlap\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    # Save the plot to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Numerical-categorical relationships plot (bar plot matrix) saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving numerical-categorical relationships plot (bar plot matrix): {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving numerical-categorical relationships plot (bar plot matrix) to file: '{image_path}' already exists.\")\n",
+    "    \n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# Use function to visualize relationships between all numerical columns and a single categorical column in the training data\n",
+    "plot_numerical_categorical_relationships(df_train, numerical_columns, \"categorical_column\", safe_to_file=\"numerical_categorical_relationships_barplots.png\")"
    ]
   },
   {
@@ -2617,6 +2671,38 @@
     "plt.tight_layout()\n",
     "\n",
     "# Show plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fee6aa3d-ac29-44c0-92b1-117578f1bed5",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Customize individual bar plots for better interpretability.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5f6c9f6-896f-4490-a125-3fe8ce91cb8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store the median of the numerical column by category\n",
+    "median_by_category = stats_by_category.median()\n",
+    "\n",
+    "# Bar plot of median by category\n",
+    "sns.barplot(x=median_by_category.index, y=median_by_category.values, palette=\"colorblind\")\n",
+    "\n",
+    "# Add title and axes labels\n",
+    "plt.title(\"Median numerical_column by categorical_column\")\n",
+    "plt.xlabel(\"Category\")\n",
+    "plt.ylabel(\"numerical_column\")\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
