In machine_learning_template.ipynb > EDA > Bivariate > Numerical vs Categorical > Visualize Relationships section: Customize individual bar plots for better interpretability

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2598,27 +2598,54 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Customize individual bar plots for better interpretability.\n",
+    "    📌 Customize individual bar plots for better interpretability. <br><br>\n",
+    "    💡 Example: Define exact order of categories and format y-axis in thousands. \n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f6c9f6-896f-4490-a125-3fe8ce91cb8c",
+   "id": "76154aa8-528e-44d6-bdde-a00f53174340",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Store the median of the numerical column by category\n",
-    "median_by_category = stats_by_category.median()\n",
+    "# Define exact order of categories\n",
+    "ordered_categories = [\"category_1\", \"category_2\", \"category_3\"]\n",
     "\n",
-    "# Bar plot of median by category\n",
-    "sns.barplot(x=median_by_category.index, y=median_by_category.values, palette=\"colorblind\")\n",
+    "# Create figure and axes\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
     "\n",
-    "# Add title and axes labels\n",
-    "plt.title(\"Median numerical_column by categorical_column\")\n",
-    "plt.xlabel(\"Category\")\n",
-    "plt.ylabel(\"numerical_column\")\n",
+    "# Create bar plot \n",
+    "sns.barplot(data=df_train, x=\"categorical_column\", order=ordered_categories, y=\"numerical_column\", estimator=np.median, errorbar=None, ax=ax)\n",
+    "\n",
+    "# Add value labels \n",
+    "for bar in ax.patches:  \n",
+    "    height = bar.get_height()\n",
+    "    value = f\"{height:,.0f}K\"  # format in thousands with thousand separator (no decimals)\n",
+    "    x_pos = bar.get_x() + bar.get_width() / 2.\n",
+    "    y_pos = height * 1.01\n",
+    "    ax.text(x_pos, y_pos, value, ha=\"center\", va=\"bottom\", fontsize=10) \n",
+    "\n",
+    "# Extend the y-axis upper limit by 5% \n",
+    "y_min, y_max = ax.get_ylim()\n",
+    "ax.set_ylim(y_min, y_max * 1.05)\n",
+    "\n",
+    "# Customize title and axes labels\n",
+    "numerical_column_name = \"numerical_column\".title().replace(\"_\", \" \")\n",
+    "categorical_column_name = \"categorical_column\".title().replace(\"_\", \" \")\n",
+    "ax.set_title(f\"Median {numerical_column_name} by {categorical_column_name}\", fontsize=14)\n",
+    "ax.set_xlabel(categorical_column_name, fontsize=12)\n",
+    "ax.set_ylabel(numerical_column_name, fontsize=12)\n",
+    "\n",
+    "# Customize axes tick labels\n",
+    "ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x / 1000:.0f}K\"))  # format in thousands (no decimals)\n",
+    "ax.tick_params(axis=\"y\", labelsize=10)\n",
+    "ax.set_xticks(range(len(ordered_categories)))\n",
+    "ax.set_xticklabels([label.title().replace(\"_\", \" \") for label in ordered_categories], fontsize=10) \n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
