In machine_learning_template.ipynb > EDA > Bivariate > Numerical vs Categorical > Group-Wise Statistics section: Update code and reorder code to first calculate group-wise statistics for all numerical columns followed by customized individual column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2424,7 +2424,29 @@
     "</div> \n",
     "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Group-wise statistics of a single numerical column.\n",
+    "    📌 Group-wise statistics of all numerical columns by a single categorical column. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7ca8415-b881-495b-8d09-2c6d354035e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Descriptive statistics of all numerical columns grouped by a single categorical column (focus on median, mean, and std for easier readability)\n",
+    "stats_by_category = df_train[numerical_columns].groupby(df_train[\"categorical_column\"]).agg([\"median\", \"mean\", \"std\"]).transpose()\n",
+    "stats_by_category"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5116ce4-6abb-4b46-8879-a91ad567c380",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Customize group-wise statistics of a single numerical column by a single categorical column.\n",
     "</div>"
    ]
   },
@@ -2436,29 +2458,7 @@
    "outputs": [],
    "source": [
     "# Descriptive statistics of a single numerical column grouped by a single categorical column\n",
-    "stats_by_category = df_train[\"numerical_column\"].groupby(df[\"categorical_column\"]).describe()\n",
-    "stats_by_category"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3dd4d97c-92fb-4545-9d83-c95ad1181278",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Group-wise statistics of all numerical columns. Focus on median, mean, and std for easier readability.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7ca8415-b881-495b-8d09-2c6d354035e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Descriptive statistics of all numerical columns grouped by a single categorical column\n",
-    "stats_by_category = df_train[numerical_columns].groupby(df_train[\"categorical_column\"]).agg([\"median\", \"mean\", \"std\"]).transpose()\n",
+    "stats_by_category = df_train[\"numerical_column\"].groupby(df_train[\"categorical_column\"]).describe()\n",
     "stats_by_category"
    ]
   },
@@ -2480,7 +2480,7 @@
    "outputs": [],
    "source": [
     "# Function to calculate Cohen's d\n",
-    "def cohens_d(df, numerical_column, categorical_column, group_1, group_2):\n",
+    "def calculate_cohens_d(df, numerical_column, categorical_column, group_1, group_2):\n",
     "    x1 = df[df[categorical_column] == group_1][numerical_column]\n",
     "    x2 = df[df[categorical_column] == group_2][numerical_column]\n",
     "    \n",
@@ -2492,12 +2492,13 @@
     "    \n",
     "    return (mean1 - mean2) / pooled_std if pooled_std != 0 else 0\n",
     "\n",
+    "\n",
     "# Use function to calculate Cohen's d for a single numerical column\n",
     "cohens_d_result = cohens_d(df_train, \"numerical_column\", \"categorical_column\", \"category_1\", \"category_2\")\n",
     "print(f\"Cohen's d: {cohens_d_result}\")\n",
     "\n",
     "# Use function to calculate Cohen's d for all numerical columns\n",
-    "cohens_d_results = {column: cohens_d(df_train, column, \"categorical_column\", \"category_1\", \"category_2\") for column in numerical_columns}\n",
+    "cohens_d_results = {column: calculate_cohens_d(df_train, column, \"categorical_column\", \"category_1\", \"category_2\") for column in numerical_columns}\n",
     "cohens_d_results = pd.DataFrame.from_dict(cohens_d_results, orient=\"index\", columns=[\"Cohen's d\"])\n",
     "cohens_d_results"
    ]
@@ -2610,6 +2611,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "from matplotlib.ticker import FuncFormatter\n",
+    "\n",
     "# Define exact order of categories\n",
     "ordered_categories = [\"category_1\", \"category_2\", \"category_3\"]\n",
     "\n",
@@ -2837,6 +2841,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "import itertools\n",
+    "\n",
+    "\n",
     "# Function to visualize pairwise relationships between all categorical columns using a grouped bar plot matrix\n",
     "def plot_categorical_relationships(df, categorical_columns, max_categories=5, safe_to_file=False):\n",
     "    # Filter columns with low cardinality (small number of unique categories) \n",
