In machine_learning_template.ipynb > EDA > Univariate > Numerical section: Update figsize and fontsize of title, axes labels and tick labels for customized histograms

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1789,36 +1789,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Visualize Distributions</strong> <br> \n",
-    "    📌 Histogram of a single numerical column.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4efcf592-a21f-4155-8d27-b16cffd8cf44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create histogram \n",
-    "sns.histplot(X_train[\"numerical_column\"])\n",
-    "\n",
-    "# Add title and axes labels \n",
-    "plt.title(\"numerical_column\")\n",
-    "plt.ylabel(\"Frequency\")\n",
-    "plt.xlabel(\"\")\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1357efeb-5ad1-4e15-875c-fce5e3a1b470",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Histogram matrix of all numerical columns. \n",
+    "    📌 Histogram matrix that shows the distributions of all numerical columns. \n",
     "</div>"
    ]
   },
@@ -1874,6 +1845,44 @@
     "\n",
     "# Example usage\n",
     "plot_histogram_matrix(X_train, numerical_columns, safe_to_file=\"numerical_distributions_histograms.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1357efeb-5ad1-4e15-875c-fce5e3a1b470",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Customize the histograms of individual columns for better interpretability. <br><br>  \n",
+    "    💡 Example: Format x-axis in thousands (K). \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4efcf592-a21f-4155-8d27-b16cffd8cf44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "from matplotlib.ticker import FuncFormatter\n",
+    "\n",
+    "# Set the figure size\n",
+    "plt.figure(figsize=(6, 4))\n",
+    "\n",
+    "# Create histogram \n",
+    "sns.histplot(X_train[\"numerical_column\"])\n",
+    "\n",
+    "# Customize title, axes labels and tick labels \n",
+    "plt.title(\"numerical_column\", fontsize=14)\n",
+    "plt.ylabel(\"Frequency\", fontsize=12)\n",
+    "plt.xlabel(\"\")\n",
+    "plt.tick_params(axis=\"both\", labelsize=10)  # apply fontsize 10 to tick labels of both axes\n",
+    "plt.gca().xaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x / 1000:.0f}K\"))   # Format x-axis tick labels in thousands (no decimals)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
