In machine_learning_template.ipynb > EDA > Univariate > Categorical section: Add column for percent frequencies formatted as string in calculate_frequencies function

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1853,8 +1853,8 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Customize the histograms of individual columns for better interpretability. <br><br>  \n",
-    "    💡 Example: Format x-axis in thousands (K). \n",
+    "    📌 Customize individual histograms for better interpretability. <br><br>  \n",
+    "    💡 Example: Format x-axis in thousands (K) without decimals. \n",
     "</div>"
    ]
   },
@@ -1906,7 +1906,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Descriptive Statistics</strong> <br> \n",
-    "    📌 Frequencies of a single categorical column.\n",
+    "    📌 Examine frequencies of categorical columns.\n",
     "</div>"
    ]
   },
@@ -1917,6 +1917,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- Frequencies of a single categorical column ---\n",
     "# Calculate absolute and relative frequencies \n",
     "absolute_frequencies = X_train[\"categorical_column\"].value_counts()\n",
     "relative_frequencies = X_train[\"categorical_column\"].value_counts(normalize=True) * 100  # in percent\n",
@@ -1926,47 +1927,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ed16eb1b-646b-4d73-9ab9-de94304d7eed",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Frequencies of all categorical columns.\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b0a9788d-1626-46a7-80dd-bbcaaf6d3ad9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- Frequencies of all categorical columns ---\n",
     "# Function to create frequency tables for all categorical columns \n",
     "def calculate_frequencies(df, categorical_columns):\n",
     "    # Initialize dictionary to store all frequency tables \n",
     "    frequencies = {}\n",
+    "\n",
+    "    # Iterate over each categorical column\n",
     "    for column in categorical_columns:\n",
-    "        # Calculate absolute and relative frequencies for current column\n",
+    "        # Calculate frequencies for current column\n",
     "        absolute_frequencies = df[column].value_counts()\n",
-    "        relative_frequencies = df[column].value_counts(normalize=True) * 100  # in percent\n",
+    "        relative_frequencies = df[column].value_counts(normalize=True) \n",
+    "        percent_frequencies = relative_frequencies.map(lambda x: f\"{x * 100:.2f}%\")  # formatted as string with % sign\n",
     "\n",
     "        # Create frequency table\n",
-    "        frequency_table = pd.concat([absolute_frequencies, relative_frequencies], axis=1).reset_index()\n",
-    "        frequency_table.columns = [\"categorical_label\", \"absolute_frequency\", \"relative_frequency\"] \n",
+    "        frequency_table = pd.concat([absolute_frequencies, relative_frequencies, percent_frequencies], axis=1).reset_index()\n",
+    "        frequency_table.columns = [\"category\", \"absolute_frequency\", \"relative_frequency\", \"percent_frequency\"] \n",
     "        \n",
-    "        # Add frequency table for current column to dictionary \n",
+    "        # Add current frequency table to dictionary \n",
     "        frequencies[column] = frequency_table\n",
+    "    \n",
     "    return frequencies\n",
     "\n",
     "\n",
-    "# Apply function to create frequency tables\n",
+    "# Use function to create frequency tables of all categorical and boolean columns in the training data\n",
     "frequencies = calculate_frequencies(X_train, categorical_columns + boolean_columns)\n",
     "\n",
-    "# Show frequency tables\n",
+    "# Display a single frequency table\n",
+    "frequencies[\"categorical_column\"][[\"category\", \"absolute_frequency\", \"percent_frequency\"]]\n",
+    "\n",
+    "# Display all frequency tables\n",
     "for column, frequency_table in frequencies.items():\n",
-    "    print(f\"{column.title()} Frequencies:\")\n",
-    "    print(f\"{frequency_table}\\n\")"
+    "    print(f\"{column.title().replace('_', ' ')} Frequencies:\")\n",
+    "    display(frequency_table[[\"category\", \"absolute_frequency\", \"percent_frequency\"]])"
    ]
   },
   {
