In machine_learning_template.ipynb > EDA > Univariate > Categorical section: Update code for frequencies of a single categorical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1920,10 +1920,11 @@
     "# --- Frequencies of a single categorical column ---\n",
     "# Calculate absolute and relative frequencies \n",
     "absolute_frequencies = X_train[\"categorical_column\"].value_counts()\n",
-    "relative_frequencies = X_train[\"categorical_column\"].value_counts(normalize=True) * 100  # in percent\n",
+    "relative_frequencies = X_train[\"categorical_column\"].value_counts(normalize=True) \n",
+    "percent_frequencies = relative_frequencies.map(lambda x: f\"{x * 100:.2f}%\")  # formatted as string with % sign\n",
     "\n",
     "# Show frequency table\n",
-    "pd.concat([absolute_frequencies, relative_frequencies], axis=1, keys=[\"absolute_frequency\", \"relative_frequency\"]).reset_index()"
+    "pd.concat([absolute_frequencies, percent_frequencies], axis=1, keys=[\"absolute_frequency\", \"percent_frequency\"]).reset_index()"
    ]
   },
   {
