--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1976,81 +1976,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Visualize Distributions</strong> <br> \n",
-    "    📌 Bar plot that shows frequencies of a single categorical column.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e9a30df-8cbe-42b6-925d-57d808f9099c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Bar plot\n",
-    "sns.barplot(x=frequencies[\"categorical_column\"][\"categorical_label\"], \n",
-    "            y=frequencies[\"categorical_column\"][\"relative_frequency\"])\n",
-    "\n",
-    "# Add title and axes labels \n",
-    "plt.title(\"categorical_column\")\n",
-    "plt.ylabel(\"Frequency (%)\")\n",
-    "plt.xlabel(\"\")\n",
-    "\n",
-    "# Rotate x-axis tick labels by 45 degrees\n",
-    "plt.xticks(rotation=45)\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d54d534e-8310-404d-8b9e-16b606f32b1b",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Horizontal bar plot of a single categorical column. Useful for columns with high cardinality (i.e., a large number of unique categories).\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ad25df1-89b1-455b-8c36-e19c85d25688",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the figure size\n",
-    "plt.figure(figsize=(6, 12))\n",
-    "\n",
-    "# Create the bar plot\n",
-    "ax = sns.barplot(x=frequencies[\"categorical_column\"][\"relative_frequency\"], \n",
-    "                 y=frequencies[\"categorical_column\"][\"categorical_label\"])\n",
-    "\n",
-    "# Add value labels inside the bars\n",
-    "for i, value in enumerate(frequencies[\"categorical_column\"][\"relative_frequency\"]):\n",
-    "    ax.text(value - 0.05,  # x position (0.05% from right end)\n",
-    "            i,    # y position\n",
-    "            f\"{value:.1f}%\",  # text (frequency with 1 decimal place)\n",
-    "            ha=\"right\",  # horizontal alignment\n",
-    "            va=\"center\") # vertical alignment\n",
-    "\n",
-    "# Add title and axes labels \n",
-    "plt.title(\"categorical_column\")\n",
-    "plt.ylabel(\"\")\n",
-    "plt.xlabel(\"Frequency (%)\")\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa22066e-6ca5-46da-9bc7-78639fba32b4",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot matrix that shows frequencies of all categorical columns. \n",
+    "    📌 Bar plot matrix that shows the frequency distributions of all categorical columns.\n",
     "</div>"
    ]
   },
@@ -2129,6 +2055,50 @@
     "\n",
     "# Use function to visualize categorical frequencies of all boolean and categorical columns in training data\n",
     "plot_categorical_frequencies(X_train, boolean_columns + categorical_columns, max_categories=8, safe_to_file=\"categorical_frequencies_barplots.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e0be43f-5b60-4f40-af64-0e545aeeb513",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Customize individual bar plots for better interpretability. <br><br>  \n",
+    "    💡 Example: Horizontal bar plot for high-cardinality column (large number of unique categories). \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ad25df1-89b1-455b-8c36-e19c85d25688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size\n",
+    "plt.figure(figsize=(6, 12))\n",
+    "\n",
+    "# Create horizontal bar plot\n",
+    "ax = sns.barplot(x=frequencies[\"categorical_column\"][\"relative_frequency\"], \n",
+    "                 y=frequencies[\"categorical_column\"][\"category\"].str.title().str.replace(\"_\", \" \"))\n",
+    "\n",
+    "# Add value labels inside the bars\n",
+    "for i, value in enumerate(frequencies[\"categorical_column\"][\"relative_frequency\"]):\n",
+    "    ax.text(value * 0.98,  # x position (slightly from right end)\n",
+    "            i,    # y position\n",
+    "            f\"{value:.1f}%\",  # text (frequency with 1 decimal place)\n",
+    "            ha=\"right\",  # horizontal alignment\n",
+    "            va=\"center\") # vertical alignment\n",
+    "\n",
+    "# Customize title, axes labels, and tick labels \n",
+    "plt.title(\"categorical_column\", fontsize=14)\n",
+    "plt.ylabel(\"\")\n",
+    "plt.xlabel(\"Frequency\", fontsize=12)\n",
+    "plt.tick_params(axis=\"both\", labelsize=10)\n",
+    "plt.gca().xaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=1))  # x tick labels as percentages (1 decimal)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
