--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2075,6 +2075,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "import matplotlib.ticker as mtick\n",
+    "\n",
     "# Set the figure size\n",
     "plt.figure(figsize=(6, 12))\n",
     "\n",
@@ -2293,6 +2296,81 @@
     "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
     "</div>\n",
     "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    <strong>Numerical-Numerical Relationships (Scatter Plot Matrix)</strong> <br>\n",
+    "    📌 Visualize pairwise relationships between all numerical columns using a scatter plot matrix.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0316f71-9be2-4b48-b0b7-38b1bd53ab73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import itertools\n",
+    "\n",
+    "\n",
+    "# Function to visualize pairwise relationships between numerical columns using a scatter plot matrix\n",
+    "def plot_numerical_relationships(df, numerical_columns, safe_to_file=False):\n",
+    "    # Get all possible pairs of numerical columns\n",
+    "    column_pairs = list(itertools.combinations(numerical_columns, 2))\n",
+    "    \n",
+    "    # Calculate number of rows and columns for subplot grid\n",
+    "    n_plots = len(column_pairs)\n",
+    "    n_cols = 3  \n",
+    "    n_rows = math.ceil(n_plots / n_cols) \n",
+    "    \n",
+    "    # Set the figure size based on 4x4 inches per subplot\n",
+    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Iterate over each column pair\n",
+    "    for i, (column_1, column_2) in enumerate(column_pairs):\n",
+    "        # Create subplot\n",
+    "        ax = plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        \n",
+    "        # Create scatter plot\n",
+    "        sns.scatterplot(data=df, x=column_1, y=column_2, ax=ax)\n",
+    "        \n",
+    "        # Customize title, axes labels, and axes tick labels\n",
+    "        column_1_name = column_1.title().replace(\"_\", \" \")\n",
+    "        column_2_name = column_2.title().replace(\"_\", \" \")\n",
+    "        ax.set_title(f\"{column_1_name} vs. {column_2_name}\", fontsize=13)\n",
+    "        ax.set_xlabel(column_1_name, fontsize=12)\n",
+    "        ax.set_ylabel(column_2_name, fontsize=12)\n",
+    "        ax.tick_params(axis=\"both\", labelsize=10)\n",
+    "            \n",
+    "    # Adjust layout to prevent overlap\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    # Save the plot to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Numerical relationships plot (scatter plot matrix) saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving numerical relationships plot (scatter plot matrix): {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving numerical relationships plot (scatter plot matrix) to file: '{image_path}' already exists.\")\n",
+    "    \n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# Use function to visualize relationships between numerical columns in the training data\n",
+    "plot_numerical_relationships(df_train, numerical_columns, safe_to_file=\"numerical_relationships_scatterplots.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a0ac8fa-6862-401a-a0be-5f59bdff803c",
+   "metadata": {},
+   "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Scatter plot between two numerical columns.\n",
     "</div>"
