In machine_learning_template.ipynb > EDA > Univariate section: Import math in all all matrix plots throughout the section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1800,6 +1800,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "import math\n",
+    "\n",
+    "\n",
     "# Function to plot a histogram matrix of all numerical columns\n",
     "def plot_histogram_matrix(df, numerical_columns, safe_to_file=False):\n",
     "    # Calculate number of rows and columns for subplot grid\n",
@@ -1988,7 +1992,9 @@
    "outputs": [],
    "source": [
     "# Imports\n",
+    "import math\n",
     "import matplotlib.ticker as mtick\n",
+    "\n",
     "\n",
     "# Function to visualize categorical frequencies with a bar plot matrix \n",
     "def plot_categorical_frequencies(df, categorical_columns, max_categories=5, safe_to_file=False):\n",
